[gd_scene load_steps=2 format=1]

[ext_resource path="res://character_gen.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 71.0
margin/right = 70.0
margin/bottom = 91.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "GEN"
flat = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="TextureFrame1" type="TextureFrame" parent="HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
expand = true
stretch_mode = 0

[node name="TextureFrame2" type="TextureFrame" parent="HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 64.0
expand = true
stretch_mode = 0

[node name="TextureFrame3" type="TextureFrame" parent="HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 64.0
expand = true
stretch_mode = 0

[node name="TextureFrame4" type="TextureFrame" parent="HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 268.0
margin/bottom = 64.0
expand = true
stretch_mode = 0

[node name="TextureFrame5" type="TextureFrame" parent="HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 272.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 64.0
expand = true
stretch_mode = 0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


